just use 100% height for nav, min-height on nav items to avoid collapsing

--- a/assets/styles/layouts/_nav.scss
+++ b/assets/styles/layouts/_nav.scss
@@ -91,8 +91,8 @@
     width: 100%;
     position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
+    height: 100%;
     z-index: 1000;
     transform: translateX(-100%);
     @include transition(transform);
@@ -104,12 +104,10 @@
 
     // Wrap the nav in full viewport
     .wrap {
-      height: calc(100vh - 44px);
-      height: calc((var(--vh, 1vh) * 100) - 44px);
+      height: calc(100% - 44px);
       @include media-md {
         .wrap {
-          height: calc(100vh - 52px);
-          height: calc((var(--vh, 1vh) * 100) - 52px);
+          height: calc(100% - 52px);
         }
       }
     }
@@ -145,6 +143,7 @@
       > li {
         position: relative;
         flex: 1;
+        min-height: 100px;
         a {
           display: flex;
           justify-content: center;
